// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly: default 1`] = `
<Fragment>
  <div>
    <h4
      className="spacer-bottom"
    >
      onboarding.build
    </h4>
    <ButtonToggle
      label="onboarding.build"
      onCheck={[Function]}
      options={
        [
          {
            "label": "onboarding.build.maven",
            "value": "maven",
          },
          {
            "label": "onboarding.build.gradle",
            "value": "gradle",
          },
          {
            "label": "onboarding.build.dotnet",
            "value": "dotnet",
          },
          {
            "label": "onboarding.build.cfamily",
            "value": "cfamily",
          },
          {
            "label": "onboarding.build.other",
            "value": "other",
          },
        ]
      }
    />
  </div>
</Fragment>
`;

exports[`renders correctly: with "maven" selected 1`] = `
<Fragment>
  <div>
    <h4
      className="spacer-bottom"
    >
      onboarding.build
    </h4>
    <ButtonToggle
      label="onboarding.build"
      onCheck={[Function]}
      options={
        [
          {
            "label": "onboarding.build.maven",
            "value": "maven",
          },
          {
            "label": "onboarding.build.gradle",
            "value": "gradle",
          },
          {
            "label": "onboarding.build.dotnet",
            "value": "dotnet",
          },
          {
            "label": "onboarding.build.cfamily",
            "value": "cfamily",
          },
          {
            "label": "onboarding.build.other",
            "value": "other",
          },
        ]
      }
      value="maven"
    />
  </div>
</Fragment>
`;

exports[`renders correctly: with "other" selected 1`] = `
<Fragment>
  <div>
    <h4
      className="spacer-bottom"
    >
      onboarding.build
    </h4>
    <ButtonToggle
      label="onboarding.build"
      onCheck={[Function]}
      options={
        [
          {
            "label": "onboarding.build.maven",
            "value": "maven",
          },
          {
            "label": "onboarding.build.gradle",
            "value": "gradle",
          },
          {
            "label": "onboarding.build.dotnet",
            "value": "dotnet",
          },
          {
            "label": "onboarding.build.cfamily",
            "value": "cfamily",
          },
          {
            "label": "onboarding.build.other",
            "value": "other",
          },
        ]
      }
      value="other"
    />
  </div>
  <RenderOptions
    label="onboarding.build.other.os"
    onCheck={[Function]}
    optionLabelKey="onboarding.build.other.os"
    options={
      [
        "linux",
        "win",
        "mac",
      ]
    }
    titleLabelKey="onboarding.build.other.os"
  />
</Fragment>
`;

exports[`renders correctly: without C 1`] = `
<Fragment>
  <div>
    <h4
      className="spacer-bottom"
    >
      onboarding.build
    </h4>
    <ButtonToggle
      label="onboarding.build"
      onCheck={[Function]}
      options={
        [
          {
            "label": "onboarding.build.maven",
            "value": "maven",
          },
          {
            "label": "onboarding.build.gradle",
            "value": "gradle",
          },
          {
            "label": "onboarding.build.dotnet",
            "value": "dotnet",
          },
          {
            "label": "onboarding.build.other",
            "value": "other",
          },
        ]
      }
    />
  </div>
</Fragment>
`;
